part1/1_12/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dev-kub-todolist-1-12-svc
spec:
  type: ClusterIP
  selector:
    app: dev-kub-todolist-1-12
  ports:
    - name: todolist
      port: 2345
      protocol: TCP
      targetPort: 3000
